XX/XX/24 (TRUST) Change       : Parser rewrite can create different initialization for random fields (Champ_front_bruite, ...) or advanced fields using Rnd function
XX/XX/24 (TRUST) Change       : y+ field were possibly wrong on tetraedra/triangle with more than one boundary face
--------------------------------------------------------------------------------------------------
Release notes version 1.9.6_beta : Enhancements, modifications and corrected bugs since version 1.9.5 :
--------------------------------------------------------------------------------------------------
18/02/25 (TRUST) Change       : dt_impr_ustar_mean_only prints now surface-averaged values instead of mean values on boundaries
18/02/25 (TRUST) New keyword  : dt_impr_nusselt_mean_only prints into a .out file the surface-averaged Nusselt related values on all or some specified boundaries (VDF/VEF/EF discretizations)
14/02/25 (TRUST) Major change : TRUST (and its baltiks) is now built with 64b support by default! Old 32b mode can still be built with '-with-32-bit-indices'
07/02/25 (TRUST) New Keyword  : [CMFD] semantics: add "models" keywords in addition to "correlations" to better fit with the Euler-Euler RANS two-phase flow framework.
06/02/25 (TRUST) Bug fix      : In PolyMAC and PolyMAC_P0P1NC, bug fix regarding nonzero Neumann conditions in the diffusive terms. See poissonSolver_PolyMAC validation form.
06/02/25 (TRUST) Bug fix      : Fix uninitialized buffer during communications in IJK FT (for TrioCFD)
03/02/25 (TRUST) New feature  : A new postprocessing field "wall_temperature" is now available for both VDF and VEF discretizations. It can be used to visualize the temperature at the wall for a thermal problem.
03/02/25 (TRUST) New feature  : A new boundary-condition "Echange_externe_radiatif" is now available for both VDF and VEF discretizations. It can be used to evacuate heat from a conduction problem via radiation.